newsletter section completed

--- a/styles/style.css
+++ b/styles/style.css
@@ -178,3 +178,55 @@ header{
 .little p{
     color: #B3B3B3;
 }
+
+/* Newsletter Section */
+.newsletter{
+    margin: 0 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 115px;
+    padding: 71px 0 71px 0;
+}
+
+.newsletter h1{
+    font-size: 90px;
+    font-weight: bold;
+}
+
+form{
+    flex-basis: 50%;
+}
+
+.form-label{
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.blank{
+    font-family: 'Inter', sans-serif;
+    margin-top: 10px;
+    padding: 20px 32px;
+    border-radius: 10px;
+    border: 1px solid #D6DDED;
+    width: 84%;
+    font-size: 20px;
+}
+
+.message{
+    font-family: 'Inter', sans-serif;
+    margin-top: 10px;
+    padding: 20px 32px;
+    width: 84%;
+    border-radius: 10px;
+    border: 1px solid #D6DDED;
+    height: 100px;
+    font-size: 20px;
+    resize: none;
+}
+
+form button{
+    width: 415px;
+    margin-top: 19px;
+}
