--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,15 @@ header{
     font-size: 16px;
     font-weight: 600;
     color: white;
+    transition: 0.3s ease;
+}
+
+.btn:hover{
+    background: transparent;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    transform: scale(1.1);
+    box-shadow: 0 0 8px var(--primary-color);
 }
 
 .hero{
@@ -229,4 +238,39 @@ form{
 form button{
     width: 415px;
     margin-top: 19px;
+}
+
+/* Footer Section */
+footer{
+    background: white;
+    display: flex;
+    align-items: center;
+}
+
+.foot{
+    margin: 104px 350px;
+    text-align: center;
+}
+
+.foot h1{
+    font-family: 'Inter', sans-serif;
+    font-size: 100px;
+    font-weight: 800;
+    color: var(--primary-color);
+}
+
+.foot p{
+    font-family: 'Inter', sans-serif;
+    color: #8987A1;
+    font-size: 20px;
+    line-height: 2rem;
+    margin-bottom: 20px;
+}
+
+.foot a{
+    text-decoration: none;
+    font-family: 'Inter', sans-serif;
+    color: #8987A1;
+    font-size: 20px;
+    margin: 0 24px;
 }
